--- a/src/u-gine.vcxproj
+++ b/src/u-gine.vcxproj
@@ -13,15 +13,19 @@
   <ItemGroup>
     <ClCompile Include="lib\stb_image.c" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="src\image.cpp" />
     <ClCompile Include="src\math.cpp" />
     <ClCompile Include="src\renderer.cpp" />
+    <ClCompile Include="src\resourcemanager.cpp" />
     <ClCompile Include="src\screen.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\array.h" />
     <ClInclude Include="include\glinclude.h" />
+    <ClInclude Include="include\image.h" />
     <ClInclude Include="include\math.h" />
     <ClInclude Include="include\renderer.h" />
+    <ClInclude Include="include\resourcemanager.h" />
     <ClInclude Include="include\screen.h" />
     <ClInclude Include="include\string.h" />
     <ClInclude Include="include\types.h" />
