--- a/src/u-gine.vcxproj
+++ b/src/u-gine.vcxproj
@@ -16,6 +16,7 @@
     <ClCompile Include="src\font.cpp" />
     <ClCompile Include="src\glyph.cpp" />
     <ClCompile Include="src\image.cpp" />
+    <ClCompile Include="src\inputmanager.cpp" />
     <ClCompile Include="src\math.cpp" />
     <ClCompile Include="src\renderer.cpp" />
     <ClCompile Include="src\resourcemanager.cpp" />
@@ -28,6 +29,7 @@
     <ClInclude Include="include\glinclude.h" />
     <ClInclude Include="include\glyph.h" />
     <ClInclude Include="include\image.h" />
+    <ClInclude Include="include\inputmanager.h" />
     <ClInclude Include="include\math.h" />
     <ClInclude Include="include\renderer.h" />
     <ClInclude Include="include\resourcemanager.h" />
