--- a/src/u-gine.vcxproj
+++ b/src/u-gine.vcxproj
@@ -19,6 +19,7 @@
     <ClCompile Include="src\image.cpp" />
     <ClCompile Include="src\inputmanager.cpp" />
     <ClCompile Include="src\math.cpp" />
+    <ClCompile Include="src\parallaxscene.cpp" />
     <ClCompile Include="src\renderer.cpp" />
     <ClCompile Include="src\resourcemanager.cpp" />
     <ClCompile Include="src\scene.cpp" />
@@ -34,6 +35,7 @@
     <ClInclude Include="include\image.h" />
     <ClInclude Include="include\inputmanager.h" />
     <ClInclude Include="include\math.h" />
+    <ClInclude Include="include\parallaxscene.h" />
     <ClInclude Include="include\renderer.h" />
     <ClInclude Include="include\resourcemanager.h" />
     <ClInclude Include="include\scene.h" />
