--- a/src/u-gine.vcxproj
+++ b/src/u-gine.vcxproj
@@ -14,12 +14,14 @@
     <ClCompile Include="lib\stb_image.c" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="src\camera.cpp" />
+    <ClCompile Include="src\emitter.cpp" />
     <ClCompile Include="src\font.cpp" />
     <ClCompile Include="src\glyph.cpp" />
     <ClCompile Include="src\image.cpp" />
     <ClCompile Include="src\inputmanager.cpp" />
     <ClCompile Include="src\math.cpp" />
     <ClCompile Include="src\parallaxscene.cpp" />
+    <ClCompile Include="src\particle.cpp" />
     <ClCompile Include="src\renderer.cpp" />
     <ClCompile Include="src\resourcemanager.cpp" />
     <ClCompile Include="src\scene.cpp" />
@@ -29,6 +31,7 @@
   <ItemGroup>
     <ClInclude Include="include\array.h" />
     <ClInclude Include="include\camera.h" />
+    <ClInclude Include="include\emitter.h" />
     <ClInclude Include="include\font.h" />
     <ClInclude Include="include\glinclude.h" />
     <ClInclude Include="include\glyph.h" />
@@ -36,6 +39,7 @@
     <ClInclude Include="include\inputmanager.h" />
     <ClInclude Include="include\math.h" />
     <ClInclude Include="include\parallaxscene.h" />
+    <ClInclude Include="include\particle.h" />
     <ClInclude Include="include\renderer.h" />
     <ClInclude Include="include\resourcemanager.h" />
     <ClInclude Include="include\scene.h" />
