--- a/src/u-gine.vcxproj.filters
+++ b/src/u-gine.vcxproj.filters
@@ -66,6 +66,9 @@
     <ClCompile Include="src\emitter.cpp">
       <Filter>Source Files\engine</Filter>
     </ClCompile>
+    <ClCompile Include="src\affector.cpp">
+      <Filter>Source Files\engine</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\array.h">
@@ -123,6 +126,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\particle.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\affector.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
