p isometric maps a medias

--- a/src/u-gine.vcxproj
+++ b/src/u-gine.vcxproj
@@ -23,6 +23,9 @@
     <ClCompile Include="src\glyph.cpp" />
     <ClCompile Include="src\image.cpp" />
     <ClCompile Include="src\inputmanager.cpp" />
+    <ClCompile Include="src\isometricmap.cpp" />
+    <ClCompile Include="src\isometricscene.cpp" />
+    <ClCompile Include="src\isometricsprite.cpp" />
     <ClCompile Include="src\map.cpp" />
     <ClCompile Include="src\mapscene.cpp" />
     <ClCompile Include="src\math.cpp" />
@@ -53,6 +56,9 @@
     <ClInclude Include="include\glyph.h" />
     <ClInclude Include="include\image.h" />
     <ClInclude Include="include\inputmanager.h" />
+    <ClInclude Include="include\isometricmap.h" />
+    <ClInclude Include="include\isometricscene.h" />
+    <ClInclude Include="include\isometricsprite.h" />
     <ClInclude Include="include\map.h" />
     <ClInclude Include="include\mapscene.h" />
     <ClInclude Include="include\math.h" />
